--- a/index.html
+++ b/index.html
@@ -18,38 +18,96 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|VT323:400,700" rel="stylesheet">
 
     <style>
-        html, body {
-            background-color: #2c3e50;
+        @font-face {
+            font-family: 'Mario';
+            src: url('fonts/SuperMario256.ttf') format('truetype');
+        }
+
+        body {
+            background-image: url('images/dark_mario_background.png'); /* Use a dark-themed Mario background */
+            background-size: cover;
+            background-color: #1a1a1a; /* Fallback color */
             color: white;
-            font-family: 'Press Start 2P', sans-serif;
+            font-family: 'Mario', 'Press Start 2P', sans-serif;
             line-height: 1.6;
             height: 100%;
             margin: 0;
-        }
-
-        .container {
-            padding-top: 50px;
-            min-height: calc(100vh - 100px);
-            box-sizing: border-box;
+            animation: zoomIn 3s ease-out;
         }
 
         .title {
-            font-size: 2em; /* Increased font size for titles */
+            font-size: 2em;
             padding: 20px;
             margin-bottom: 20px;
-            font-family: 'VT323', monospace;
+            font-family: 'Mario', 'VT323', monospace;
             font-weight: 700;
+            border: 2px solid #fff;
+            box-shadow: 0 0 10px #fff;
+            animation: blink 3s infinite; /* Increased duration to 3s */
         }
 
         .nes-btn {
             margin-top: 10px;
             margin-bottom: 20px;
             padding: 15px 30px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s;
+            border: 2px solid #fff;
+            box-shadow: 0 0 10px #fff;
+            background-image: url('images/mario_button.png');
+            background-size: cover;
         }
 
         .nes-btn:hover {
-            background-color: #3498db;
+            background-color: #ffcc00;
+            transform: scale(1.1);
+        }
+
+        .social-icons a {
+            margin: 0 5px;
+            transition: transform 0.3s;
+            background-image: url('images/mario_icon.png');
+            background-size: cover;
+        }
+
+        .social-icons a:hover {
+            transform: scale(1.2);
+        }
+
+        .social-icons i {
+            font-size: 24px;
+        }
+
+        @keyframes blink {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.7; } /* Reduced opacity change */
+        }
+
+        @keyframes scroll {
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+            40% { transform: translateY(-30px); }
+            60% { transform: translateY(-15px); }
+        }
+
+        @keyframes zoomIn {
+            0% {
+                transform: scale(10) translateY(1000px);
+                opacity: 0;
+            }
+            100% {
+                transform: scale(1) translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .container {
+            padding-top: 50px;
+            min-height: calc(100vh - 100px);
+            box-sizing: border-box;
         }
 
         .lists ul {
@@ -89,19 +147,7 @@
             padding: 10px 0;
             background-color: #1a252f;
             margin-top: 20px;
-        }
-
-        .social-icons a {
-            margin: 0 5px;
-            transition: transform 0.3s;
-        }
-
-        .social-icons a:hover {
-            transform: scale(1.2);
-        }
-
-        .social-icons i {
-            font-size: 24px;
+            border-top: 2px solid #fff;
         }
 
         h1, h3, h4 {
@@ -109,17 +155,19 @@
         }
 
         h1 {
-            font-size: 2.5em; /* Increased font size for main heading */
+            font-size: 2.5em;
             font-weight: 700;
+            border-bottom: 2px solid #fff;
+            padding-bottom: 10px;
         }
 
         h3 {
-            font-size: 2em; /* Increased font size for subheadings */
+            font-size: 2em;
             font-weight: 700;
         }
 
         h4 {
-            font-size: 1.5em; /* Increased font size for smaller headings */
+            font-size: 1.5em;
             font-weight: 400;
         }
 
@@ -134,11 +182,34 @@
             width: 100%;
             max-width: 200px;
             height: 200px;
+            border: 2px solid #fff;
+            box-shadow: 0 0 10px #fff;
+            transition: transform 0.3s;
+        }
+
+        #dp.bounce {
+            animation: bounce 2s;
+        }
+
+        #dp:hover {
+            transform: scale(1.1);
         }
 
         .timeline {
-            font-size: 1em;
+            font-size: 0.7em;
             font-weight: 400;
+        }
+
+        .scrolling-text {
+            white-space: nowrap;
+            overflow: hidden;
+            box-sizing: border-box;
+        }
+
+        .scrolling-text p {
+            display: inline-block;
+            padding-left: 100%;
+            animation: scroll 10s linear infinite;
         }
     </style>
 </head>
@@ -366,5 +437,34 @@
             </div>
         </footer>
     </div>
+
+    <script>
+        window.addEventListener('load', function() {
+            setTimeout(function() {
+                window.scroll(0, 0); // Scroll to the top of the page on load
+            }, 100); // Slight delay to ensure it executes after the page is fully loaded
+
+            const observerOptions = {
+                root: null,
+                rootMargin: '0px',
+                threshold: 0.1
+            };
+
+            const observerCallback = (entries, observer) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('bounce');
+                        observer.unobserve(entry.target);
+                    }
+                });
+            };
+
+            const observer = new IntersectionObserver(observerCallback, observerOptions);
+
+            document.querySelectorAll('.nes-btn, #dp').forEach(element => {
+                observer.observe(element);
+            });
+        });
+    </script>
 </body>
 </html>
