--- a/index.html
+++ b/index.html
@@ -19,206 +19,230 @@
 
     <style>
         @font-face {
-            font-family: 'Mario';
+            font-family: 'SuperMario256';
             src: url('fonts/SuperMario256.ttf') format('truetype');
         }
 
-        body {
-            background-image: url('images/dark_mario_background.png'); /* Use a dark-themed Mario background */
-            background-size: cover;
-            background-color: #1a1a1a; /* Fallback color */
-            color: white;
-            font-family: 'Mario', 'Press Start 2P', sans-serif;
-            line-height: 1.6;
+        body, html {
+            width: 100%;
             height: 100%;
-            margin: 0;
-            animation: zoomIn 3s ease-out;
-        }
-
-        .title {
-            font-size: 2em;
-            padding: 20px;
-            margin-bottom: 20px;
-            font-family: 'Mario', 'VT323', monospace;
-            font-weight: 700;
-            border: 2px solid #fff;
-            box-shadow: 0 0 10px #fff;
-            animation: blink 3s infinite; /* Increased duration to 3s */
-        }
-
-        .nes-btn {
-            margin-top: 10px;
-            margin-bottom: 20px;
-            padding: 15px 30px;
-            transition: background-color 0.3s, transform 0.3s;
-            border: 2px solid #fff;
-            box-shadow: 0 0 10px #fff;
-            background-image: url('images/mario_button.png');
-            background-size: cover;
-        }
-
-        .nes-btn:hover {
-            background-color: #ffcc00;
-            transform: scale(1.1);
-        }
-
-        .social-icons a {
-            margin: 0 5px;
-            transition: transform 0.3s;
-            background-image: url('images/mario_icon.png');
-            background-size: cover;
-        }
-
-        .social-icons a:hover {
-            transform: scale(1.2);
-        }
-
-        .social-icons i {
-            font-size: 24px;
-        }
-
-        @keyframes blink {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.7; } /* Reduced opacity change */
-        }
-
-        @keyframes scroll {
-            0% { transform: translateX(100%); }
-            100% { transform: translateX(-100%); }
-        }
-
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-            40% { transform: translateY(-30px); }
-            60% { transform: translateY(-15px); }
-        }
-
-        @keyframes zoomIn {
-            0% {
-                transform: scale(10) translateY(1000px);
-                opacity: 0;
-            }
-            100% {
-                transform: scale(1) translateY(0);
-                opacity: 1;
-            }
+            background-color: #E0F7FA;
+            font-family: 'Press Start 2P', monospace;
+            color: #333333;
+            line-height: 1.6;
+            font-size: 14px;
         }
 
         .container {
-            padding-top: 50px;
-            min-height: calc(100vh - 100px);
-            box-sizing: border-box;
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 15px;
+            padding: 25px;
+            margin-top: 25px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
+        }
+
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'SuperMario256', 'Press Start 2P', sans-serif;
+            margin-bottom: 15px;
+            letter-spacing: 1px;
+        }
+
+        h1 {
+            color: #4A7CFF;
+            font-size: 2rem;
+            text-shadow: 2px 2px 0 #FFFFFF, -2px -2px 0 #FFFFFF, 2px -2px 0 #FFFFFF, -2px 2px 0 #FFFFFF;
+        }
+
+        h2 {
+            color: #66BB6A;
+            font-size: 1.5rem;
+            border-bottom: 2px solid #4A7CFF;
+            padding-bottom: 8px;
+        }
+
+        h3 {
+            color: #4A7CFF;
+            font-size: 1.25rem;
+        }
+
+        h4 {
+            font-size: 1rem;
+        }
+
+        p, li {
+            color: #333333;
+            font-size: 0.875rem;
+            line-height: 1.8;
+        }
+
+        .title {
+            background-color: #C26B2B;
+            color: #FFFFFF;
+            font-size: 1rem;
+            padding: 12px 20px;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            font-weight: 700;
+            text-transform: uppercase;
+            border: none;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            display: inline-block;
+            width: auto;
+            background-image:
+                linear-gradient(90deg, #A05000 2px, transparent 2px),
+                linear-gradient(0deg, #A05000 2px, transparent 2px);
+            background-size: 20px 20px;
+            background-position: 0 0, 0 0;
+            cursor: pointer;
+            -webkit-tap-highlight-color: transparent;
+            outline: none; /* Remove outline on focus */
+        }
+
+        .title:active {
+            transform: translateY(2px);
+            background-color: #B25D00;
+        }
+
+        .title:focus {
+            outline: none; /* Remove outline on focus */
+        }
+
+        .coin {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: #FFD700;
+            border-radius: 50%;
+            display: none;
+            animation: coinJump 0.5s ease-out;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        @keyframes coinJump {
+            0% { bottom: 0; opacity: 1; }
+            100% { bottom: 100%; opacity: 0; }
+        }
+
+        .title-container {
+            margin-top: 40px;
+            margin-bottom: 40px;
+            text-align: left; /* Change from center to left */
+        }
+
+        .nes-btn {
+            background-color: #66BB6A;
+            color: #FFFFFF;
+            text-transform: uppercase;
+            padding: 8px 16px;
+            margin: 6px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            font-size: 0.875rem;
+        }
+
+        .nes-btn:hover {
+            background-color: #4CAF50;
+            transform: translateY(2px);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
         }
 
         .lists ul {
             list-style-type: none;
-            padding: 0;
+            padding-left: 15px;
         }
 
         .lists li {
-            margin-bottom: 20px;
-            position: relative;
-            padding-left: 30px;
+            margin-bottom: 15px;
+            line-height: 1.8;
         }
 
         .lists li::before {
-            content: '•';
-            position: absolute;
-            left: 0;
-            color: #3498db;
-            font-size: 1.2em;
-        }
-
-        .lists ul ul {
-            list-style-type: none;
-            padding-left: 20px;
-        }
-
-        .lists ul ul li::before {
-            content: '•';
-            color: #3498db;
+            content: '🍄';
+            margin-right: 8px;
             font-size: 1em;
-        }
-
-        .footer-content {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 0;
-            background-color: #1a252f;
-            margin-top: 20px;
-            border-top: 2px solid #fff;
-        }
-
-        h1, h3, h4 {
-            font-family: 'VT323', monospace;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            font-weight: 700;
-            border-bottom: 2px solid #fff;
-            padding-bottom: 10px;
-        }
-
-        h3 {
-            font-size: 2em;
-            font-weight: 700;
-        }
-
-        h4 {
-            font-size: 1.5em;
-            font-weight: 400;
-        }
-
-        p, li {
-            font-size: 1em;
-            margin-bottom: 1em;
-            font-weight: 400;
         }
 
         #dp {
             border-radius: 10px;
-            width: 100%;
-            max-width: 200px;
-            height: 200px;
-            border: 2px solid #fff;
-            box-shadow: 0 0 10px #fff;
-            transition: transform 0.3s;
+            box-shadow: 0 0 10px rgba(74, 124, 255, 0.3);
         }
 
-        #dp.bounce {
-            animation: bounce 2s;
+        .footer-content {
+            background-color: rgba(74, 124, 255, 0.1);
+            padding: 10px 0;
+            border-radius: 0 0 15px 15px;
+            color: #4A7CFF;
+            font-size: 0.75rem;
         }
 
-        #dp:hover {
-            transform: scale(1.1);
+        .social-icons a {
+            color: #4A7CFF;
+            font-size: 1.25rem;
+            margin: 0 10px;
+            transition: all 0.3s ease;
         }
 
-        .timeline {
-            font-size: 0.7em;
-            font-weight: 400;
+        .social-icons a:hover {
+            color: #FF7043;
+            transform: scale(1.2);
         }
 
-        .scrolling-text {
-            white-space: nowrap;
-            overflow: hidden;
-            box-sizing: border-box;
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-6px); }
+            100% { transform: translateY(0px); }
         }
 
-        .scrolling-text p {
-            display: inline-block;
-            padding-left: 100%;
-            animation: scroll 10s linear infinite;
+        .float {
+            animation: float 3s ease-in-out infinite;
+        }
+
+        .mario-block {
+            background-color: #F5F5F5;
+            padding: 15px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            border-radius: 8px;
+            transition: all 0.3s ease;
+        }
+
+        .mario-block:hover {
+            transform: translateY(2px);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+        }
+
+        .mario-pipe {
+            background-color: #E8F5E9;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 0 0 12px 12px;
+            position: relative;
+        }
+
+        .mario-pipe::before {
+            content: '';
+            position: absolute;
+            top: -12px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 40px;
+            height: 12px;
+            background-color: #E8F5E9;
+            border-radius: 6px 6px 0 0;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <!-- PROFILE -->
-        <section class="row">
-            <div class="col-xs-12 col-md-4 col-lg-3" id="about_me">
-                <button type="button" class="nes-btn is-primary title">ABOUT ME</button>
+        <section class="row title-container">
+            <div class="col-xs-12">
+                <button type="button" class="title">ABOUT ME</button>
             </div>
         </section>
 
@@ -250,9 +274,9 @@
         </section>
 
         <!-- WORK EXPERIENCE -->
-        <section class="row">
+        <section class="row title-container">
             <div class="col-xs-12">
-                <button type="button" class="nes-btn is-primary title">WORK EXPERIENCE</button>
+                <button type="button" class="title">WORK EXPERIENCE</button>
             </div>
         </section>
 
@@ -347,9 +371,9 @@
         </section>
 
         <!-- SKILLS -->
-        <section class="row">
+        <section class="row title-container">
             <div class="col-xs-12">
-                <button type="button" class="nes-btn is-primary title">SKILLS</button>
+                <button type="button" class="title">SKILLS</button>
             </div>
         </section>
         <section class="row">
@@ -363,9 +387,9 @@
         </section>
 
         <!-- TECHNICAL ACHIEVEMENTS -->
-        <section class="row">
+        <section class="row title-container">
             <div class="col-xs-12">
-                <button type="button" class="nes-btn is-primary title">TECHNICAL ACHIEVEMENTS</button>
+                <button type="button" class="title">TECHNICAL ACHIEVEMENTS</button>
             </div>
         </section>
         <section class="row">
@@ -381,9 +405,9 @@
         </section>
 
         <!-- PUBLIC SPEAKING AWARDS -->
-        <section class="row">
+        <section class="row title-container">
             <div class="col-xs-12">
-                <button type="button" class="nes-btn is-primary title">PUBLIC SPEAKING AWARDS</button>
+                <button type="button" class="title">PUBLIC SPEAKING AWARDS</button>
             </div>
         </section>
         <section class="row">
@@ -405,20 +429,17 @@
         </section>
 
         <!-- EDUCATION -->
-        <section class="row">
+        <section class="row title-container">
             <div class="col-xs-12">
-                <button type="button" class="nes-btn is-primary title">EDUCATION</button>
+                <button type="button" class="title">EDUCATION</button>
             </div>
         </section>
         <section class="row">
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12 col-md-6">
                 <h3>Bachelor of Engineering in Information Technology</h3>
             </div>
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12 col-md-6">
                 <h3>Ramdeobaba College of Engineering, Nagpur</h3>
-            </div>
-            <div class="col-xs-12 col-md-4">
-                <h3>August 2014 to May 2018</h3>
             </div>
         </section>
 
@@ -440,29 +461,30 @@
 
     <script>
         window.addEventListener('load', function() {
-            setTimeout(function() {
-                window.scroll(0, 0); // Scroll to the top of the page on load
-            }, 100); // Slight delay to ensure it executes after the page is fully loaded
+            const buttons = document.querySelectorAll('.title');
+            const coinSound = new Audio('path/to/coin-sound.mp3'); // Replace with actual path to coin sound
 
-            const observerOptions = {
-                root: null,
-                rootMargin: '0px',
-                threshold: 0.1
-            };
+            buttons.forEach(button => {
+                button.addEventListener('click', function(e) {
+                    const coin = document.createElement('div');
+                    coin.classList.add('coin');
 
-            const observerCallback = (entries, observer) => {
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        entry.target.classList.add('bounce');
-                        observer.unobserve(entry.target);
-                    }
+                    this.appendChild(coin);
+                    this.style.position = 'relative'; // Ensure the button has a positioning context
+
+                    // Trigger reflow to restart the animation
+                    void coin.offsetWidth;
+
+                    coin.style.display = 'block';
+                    coinSound.play();
+
+                    setTimeout(() => {
+                        coin.remove();
+                    }, 500);
+
+                    // Prevent default button behavior
+                    e.preventDefault();
                 });
-            };
-
-            const observer = new IntersectionObserver(observerCallback, observerOptions);
-
-            document.querySelectorAll('.nes-btn, #dp').forEach(element => {
-                observer.observe(element);
             });
         });
     </script>
