--- a/index.html
+++ b/index.html
@@ -26,12 +26,27 @@
             color: #fff;
             line-height: 1.6;
             background-color: #000;
-            background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+            background-image: url('https://images.unsplash.com/photo-1501862700950-18382cd41497?ixlib=rb-1.2.1&auto=format&fit=crop&w=1947&q=80');
             background-attachment: fixed;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
             overflow-x: hidden;
+        }
+
+        .bg-image {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('https://images.unsplash.com/photo-1501862700950-18382cd41497?ixlib=rb-1.2.1&auto=format&fit=crop&w=1947&q=80');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            opacity: 0;
+            transition: opacity 2s ease-in-out;
+            z-index: -1;
         }
 
         .container {
@@ -160,6 +175,26 @@
             font-size: 4rem;
             margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            position: relative;
+            display: inline-block;
+        }
+
+        .hero-content h1::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 110%;
+            height: 110%;
+            background: radial-gradient(ellipse at center, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 70%);
+            z-index: -1;
+            opacity: 0;
+            transition: opacity 0.5s ease;
+        }
+
+        .hero-content h1:hover::after {
+            opacity: 1;
         }
 
         .hero-content p {
@@ -183,6 +218,8 @@
     </style>
 </head>
 <body>
+    <div class="bg-image"></div>
+
     <!-- Hero Section -->
     <section id="hero" class="parallax">
         <div class="hero-content">
@@ -290,7 +327,7 @@
 
     <footer>
         <div class="container text-center">
-            <p>&copy; 2023 Raunak Singwi. All rights reserved.</p>
+            <p>&copy; 2024 Raunak Singwi. All rights reserved.</p>
         </div>
     </footer>
 
@@ -333,6 +370,33 @@
             //     var scrolled = $(window).scrollTop();
             //     $('#hero').css('background-position-y', -(scrolled * 0.5) + 'px');
             // });
+        });
+
+        // Fade in background image
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const bgImage = document.querySelector('.bg-image');
+
+            function loaded() {
+                setTimeout(() => {
+                    bgImage.style.opacity = '0.5';
+                }, 1000); // Delay the fade-in by 1 second
+            }
+
+            // Create a new image object to check if the image is cached
+            let img = new Image();
+            img.src = 'https://images.unsplash.com/photo-1501862700950-18382cd41497?ixlib=rb-1.2.1&auto=format&fit=crop&w=1947&q=80';
+
+            if (img.complete) {
+                loaded();
+            } else {
+                img.addEventListener('load', loaded);
+            }
+
+            // Fallback in case image fails to load
+            img.addEventListener('error', function() {
+                console.error('Background image failed to load');
+                bgImage.style.display = 'none';
+            });
         });
     </script>
 </body>
