--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <style>
         body, html {
             font-family: 'Roboto', sans-serif;
-            color: #fff;
+            color: #e0e0e0;
             line-height: 1.6;
-            background-color: #000;
+            background-color: #121212;
             background-image: url('https://images.unsplash.com/photo-1501862700950-18382cd41497?ixlib=rb-1.2.1&auto=format&fit=crop&w=1947&q=80');
             background-attachment: fixed;
             background-position: center;
@@ -56,8 +56,9 @@
         }
 
         h1, h2, h3, h4, h5, h6 {
-            font-weight: 700;
-            margin-bottom: 20px;
+            font-weight: 300;
+            letter-spacing: 0.5px;
+            color: #ffffff;
         }
 
         h1 {
@@ -69,37 +70,51 @@
 
         h2 {
             font-size: 2.5rem;
-            color: #fff;
-            border-bottom: 2px solid #0070c9;
+            border-bottom: 2px solid rgba(255, 255, 255, 0.1);
             padding-bottom: 10px;
             margin-top: 40px;
         }
 
         h3 {
             font-size: 1.8rem;
-            color: #0070c9;
+            color: #81d4fa;
         }
 
         p, li {
-            font-size: 1.1rem;
-            color: #e0e0e0;
+            font-weight: 300;
+            line-height: 1.8;
+            color: #bdbdbd;
         }
 
         .section {
-            background-color: rgba(0, 0, 0, 0.7);
-            border-radius: 15px;
+            background-color: rgba(30, 30, 30, 0.8);
+            border-radius: 20px;
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(5px);
-            -webkit-backdrop-filter: blur(5px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
             padding: 40px;
             margin-bottom: 50px;
             transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .section::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(ellipse at center, rgba(129, 212, 250, 0.05) 0%, rgba(0, 0, 0, 0) 70%);
+            transform: rotate(30deg);
+            pointer-events: none;
         }
 
         .section:hover {
             transform: translateY(-5px);
-            box-shadow: 0 6px 40px rgba(0, 112, 201, 0.2);
+            box-shadow: 0 6px 40px rgba(129, 212, 250, 0.1);
         }
 
         #profile-pic {
@@ -115,8 +130,8 @@
         }
 
         .skill-tag {
-            background-color: #0070c9;
-            color: #fff;
+            background-color: #37474f;
+            color: #81d4fa;
             padding: 8px 15px;
             border-radius: 20px;
             display: inline-block;
@@ -126,25 +141,26 @@
         }
 
         .skill-tag:hover {
-            background-color: #005999;
+            background-color: #455a64;
             transform: translateY(-2px);
         }
 
         .timeline {
             font-size: 0.9rem;
-            color: #bbb;
-            margin-bottom: 10px;
+            color: #81d4fa;
+            margin-bottom: 15px;
+            font-weight: 400;
         }
 
         .social-icons a {
-            color: #0070c9;
+            color: #81d4fa;
             font-size: 1.8rem;
             margin: 0 15px;
             transition: all 0.3s ease;
         }
 
         .social-icons a:hover {
-            color: #005999;
+            color: #4fc3f7;
             transform: translateY(-3px);
         }
 
@@ -187,14 +203,25 @@
             transform: translate(-50%, -50%);
             width: 110%;
             height: 110%;
-            background: radial-gradient(ellipse at center, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 70%);
+            background: radial-gradient(ellipse at center, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0) 70%);
             z-index: -1;
-            opacity: 0;
-            transition: opacity 0.5s ease;
+            opacity: 1;
+            animation: pulse 2s infinite;
         }
 
-        .hero-content h1:hover::after {
-            opacity: 1;
+        @keyframes pulse {
+            0% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.7;
+            }
+            50% {
+                transform: translate(-50%, -50%) scale(1.05);
+                opacity: 1;
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.7;
+            }
         }
 
         .hero-content p {
@@ -204,16 +231,37 @@
         }
 
         .btn-primary {
-            background-color: #0070c9;
+            background-color: #37474f;
             border: none;
             padding: 10px 25px;
             font-size: 1.1rem;
             transition: all 0.3s ease;
+            color: #81d4fa;
         }
 
         .btn-primary:hover {
-            background-color: #005999;
+            background-color: #455a64;
             transform: translateY(-2px);
+        }
+
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        li {
+            position: relative;
+            padding-left: 25px;
+            margin-bottom: 15px;
+        }
+
+        li::before {
+            content: '•';
+            position: absolute;
+            left: 0;
+            color: #81d4fa;
+            font-size: 1.2em;
+            line-height: 1.4;
         }
     </style>
 </head>
